test/spec_vectors/memory64/ok/module_6.wat
(module (memory i64 (data)) (func (export "memsize") (result i64) (memory.size)))