test/spec_vectors/memory64/fail/module_15.wat
(module (func (i32.store8 (i64.const 0) (i32.const 0))))